package wiki.hf.domain;

public enum ActionType
{
    CREATE,
    EDIT,
    DELETE
}
