package wiki.hf.domain;

public enum ItemType
{
    LIST,
    TEXT,
    IMAGE,
    VIDEO
}
