@startuml
'https://plantuml.com/class-diagram'

entity Account
{
    - FullName: String
    - Username: String
    - Email: String
    - Mobile: Int
    - Password: String
    - Action: Action
    - Role: Role
}

enum Role
{
    USER
    EDITOR
    ADMIN
    OWNER
}

entity Action <<(V, #229988)>>
{
    - Date: DateAndTimestamp
    - Type: ActionType
    - Account: Account
}

enum ActionType
{
    CREATE
    EDIT
    DELETE
}

abstract class Metadata
{
    - Name: String
    - Description: String
    - Action: Action
}

entity Page
{
    - Sections: Set<Section>
    - Comments: Set<Comment>
}

entity Comment
{

    - Text: Text
    - Answers: Set<Comment>
}

entity Section
{
    - Items: Set<SectionItem>
}

entity SectionItem
{
    - Item: Item
    - Section: Section
}

entity Item
{
    - Type: ItemType
    - List: List
    - Content: Content
}

enum ItemType
{
    PARAGRAPH
    LIST
    IMAGE
    VIDEO
}

entity List
{
    - Items: Set<Item>
}

entity Content <<(V, #229988)>>
{
    - Paragraph: String
    - Image: ImageBuffer
}

Page -up-|> Metadata

Section -up-|> Metadata
Section -down-* Page

SectionItem -up-* Item
SectionItem -right-* Section

List -down-|> Metadata
List -down-* Item

Item -right-|> Metadata
'Item -down-* Section
Item -up-o List
Item -left-> Content
Item .up. ItemType

Comment -up-* Comment
Comment -up-* Action
Comment -left-* Page

Action -left-* Metadata
Action -right-> Account
Action .up. ActionType

Account .up. Role

@enduml